--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,3 @@
-unbind C-b
-set-option -g prefix C-w
-bind-key C-w send-prefix
-
 # use <prefix> s for horizontal split
 bind s split-window -v
 # use <prefix> v for vertical split
@@ -18,3 +14,8 @@ bind < resize-pane -L 10
 bind > resize-pane -R 10
 bind - resize-pane -D 10
 bind + resize-pane -U 10
+
+# vim scrolling + text selection
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
