--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # use <prefix> s for horizontal split
-bind s split-window -v
+bind = split-window -v
 # use <prefix> v for vertical split
-bind v split-window -h
+bind | split-window -h
 
 # vim like pane switching
 bind h select-pane -L
